# dnd-rag

./: .gitignore  404.html  Justfile  README.md  devenv.nix  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
contributing/: index.html
docs/: contributing.md  index.md  legal.md
docs/research/: index.md
docs/research/00_traditional-rag/: index.md  langgraph.md
docs/research/engineering/00_naive-rag/: langgraph.md
legal/: index.html
notebooks/: 00_get_data.ipynb  01_embeddings.ipynb  02_llm.ipynb
research/: README.md  index.html
research/00_traditional-rag/: README.md  characters.md  index.html  langgraph.ipynb  pyproject.toml
research/00_traditional-rag/langgraph/: index.html
research/01_rag-evaluation/: pyproject.toml
research/engineering/00_naive-rag/: langgraph.ipynb
research/engineering/00_naive-rag/langgraph/: index.html
search/: search_index.json
