[project]
name = "dnd-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "lancedb>=0.22.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.2.0",
    "polars>=1.30.0",
    "pydantic-ai>=0.2.12",
    "pylance>=0.28.0",
    "sentence-transformers>=4.1.0",
    "tantivy>=0.24.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material[imaging]>=9.6.14",
]
