[project]
name = "00-naive-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain-anthropic>=0.3.14",
    "langchain-community>=0.3.21",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.7",
]
